# ChangeLog for media-libs/libpng
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.470 2014/12/16 20:45:53 maekke Exp $

  16 Dec 2014; Markus Meier <maekke@gentoo.org> libpng-1.6.15.ebuild:
  arm stable, bug #531264

  12 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libpng-1.6.15.ebuild:
  Stable for ia64, wrt bug #531264

  11 Dec 2014; Jeroen Roovers <jer@gentoo.org> libpng-1.6.15.ebuild:
  Stable for HPPA (bug #531264).

  10 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libpng-1.2.52.ebuild,
  libpng-1.5.20.ebuild, libpng-1.6.15.ebuild:
  Stable for x86, wrt bug #531264

  10 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libpng-1.2.52.ebuild,
  libpng-1.5.20.ebuild, libpng-1.6.15.ebuild:
  Stable for amd64, wrt bug #531264

*libpng-1.6.15 (24 Nov 2014)
*libpng-1.5.20 (24 Nov 2014)
*libpng-1.2.52 (24 Nov 2014)

  24 Nov 2014; Tim Harder <radhermit@gentoo.org> +libpng-1.2.52.ebuild,
  +libpng-1.5.20.ebuild, +libpng-1.6.15.ebuild:
  Version bump.

  17 Oct 2014; Tobias Klausmann <klausman@gentoo.org> libpng-1.6.12.ebuild:
  Stable on alpha, bug 517788

*libpng-1.6.13 (24 Aug 2014)
*libpng-1.5.19 (24 Aug 2014)

  24 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.5.19.ebuild,
  +libpng-1.6.13.ebuild:
  Version bump.

  01 Aug 2014;  <tgall@gentoo.org> libpng-1.6.12.ebuild:
  arm64 stable, bug #517788

  01 Aug 2014; Markus Meier <maekke@gentoo.org> libpng-1.6.12.ebuild:
  arm stable, bug #517788

  30 Jul 2014; Jeroen Roovers <jer@gentoo.org> libpng-1.6.12.ebuild:
  Stable for HPPA (bug #517788).

  22 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> -libpng-1.5.18.ebuild:
  old

  22 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> libpng-1.5.18-r1.ebuild:
  amd64/x86 stable

  22 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> libpng-1.6.12.ebuild:
  amd64/x86 stable wrt #517788

  04 Jul 2014; Michael Haubenwallner <haubi@gentoo.org> libpng-1.6.12.ebuild: