@@ -3,35 +3,42 @@ Hash: SHA256
 
 DIST libpng-1.2.51.tar.xz 562940 SHA256 c7d7b813b022afd70474f78bcc3655c7bb54edbf28dd4652e5521cbb6da56d4a SHA512 63ba0df5eff78b254d53f6cfd4075d3ea93ee9445e37678fc7d29fa116137b2a7c441eda23851638f9185166e408f42c51d0678c466c8376a1de356c7db760f2 WHIRLPOOL d829b07e950c64a8de37591ac5d40211f8e762feff8ff6f98db35714293997304b3eb063ea69a87064e6c66530a4fa2531dadcb1a0bb412066c558a5ff2f679c
 DIST libpng-1.2.52.tar.xz 566088 SHA256 d4fb0fbf14057ad6d0319034188fc2aecddb493da8e3031b7b072ed28f510ec0 SHA512 5890daec6aaf619e3eab32ee8105182f220ffce9e945a5129148ff6918d3749ddb3e9f60c25d6e8457184d5a2622b07d154640d13afb92f5ce9c48873e956a42 WHIRLPOOL dfa6870e7d5e4ca05ba74bd9cd599bcbc301046c7bde7042cd2d1ec4c706f4754dd40a10bd3d753ab169cc3365152a6c1f0f8fa33bcd0e0812019c670c49194a
-DIST libpng-1.5.18-apng.patch.gz 9580 SHA256 9b0d8edb61808e9863997055f7fbb1574877ff8aae50d477b9d97fcab65166b7 SHA512 00b133cff95d7d685d4982c0935a0c060a360708fe88c6321196f4e8c4944963b3daa9a2c0f17eac791c50f01dccf7ce0448983708bbbcc0bfc2979d7e7b4f2d WHIRLPOOL 1d31ae679ed7880300b6a09083b37a2cd79d167c5f988c001ff2f2f9ad95efdddfc22c12cdd6dc92f2a70f72bbef89235f0951c6ccdabc28ff02703178bb1adc
-DIST libpng-1.5.18.tar.xz 730340 SHA256 c093c2f779fecb029e51b73d6d646b77edce882474326485f50347606e383585 SHA512 8aac73a76498da3820422ac0ee980bf687f34c7b2e828fdad6add705753c6be747d49aa354c130764acbf38fe75a3d54757bc14557adc52d8cae9fade52a4167 WHIRLPOOL fb974316278e1f0a875efc54c878b984a3e4e6baa8a848785131d3be1d83c105a860018afb1c7edfe3f834d1adcd548ddb7136b3e7e19ead16cb48356546300d
-DIST libpng-1.5.19-apng.patch.gz 9510 SHA256 db6ec104b25f5374f99fcf3be7012998913d4ba0f0b56cae068498a4e2888dd4 SHA512 5a1fb73782ddc3a97a743a28d6aac3e2307aa82f1b34bcdf63a1f891e2202fd46836923919612b130e6a61fa595b022c507fe16177471c784ff094ed3d32be4f WHIRLPOOL 4f397e533d2d7f404bdc6e54a145976821a830796a71c0b8d6112cc21b74a8cc3001594128e868c3d56703d78f6b5999a8cf02e46863bb09369c4478dc8c7f7e
-DIST libpng-1.5.19.tar.xz 733496 SHA256 1e255c36b0b9109e1cba652ebbd6b2e2268204de426a82153a6bd1a61b0329e9 SHA512 9a8c2144bdc14648ff335bce4e807cf58e5643c865a54ddb57e85bd5791c301cfe1b8bf69f766985761299c850389cba0a306d193051afe2867a01283e6a1b21 WHIRLPOOL 487e93b6f9c3bb41207aadc728dfa34139154542e09e57fd9cd2887a63b31fde49289b76d41cf8c3d78ad63ffea4dbc7ce7903b122d5234dd41142c389b51fe3
 DIST libpng-1.5.20-apng.patch.gz 9511 SHA256 1b4fbbc1b72046ab1f2744a6ac953378d316dd72a4b8252cc2ae16751f9e55f7 SHA512 73275eada044c8983446e41b089ca78899924e118dfe6927bf1346c69fd220060bc2bde9abc0c49ddd61a38c645f52c1d815de73f1b052587c11649b503545eb WHIRLPOOL 0290abecb3dddc164d5c700cc3ed5f5c6152fbb2ec1094ffae61df8e41d70d45bd8d8243ed6ba193975ef35ca83e6dce5c571ccd5fd1b2cc7cbdfb563903e9d9
 DIST libpng-1.5.20.tar.xz 734068 SHA256 7cebb680ec30b42b540466a7dc4e376dcd9c95c7eaae1e84fe76408005050bb1 SHA512 048e8c564e9e9665fe1fe51fb24a09b9aceeb6b8cd4456c038981632efb5ad626a997802da62c331843cf4e0f78baa1e6987a7fc338e41e4f074332925efee96 WHIRLPOOL afd28cb836ce2d21649da9819bbf6dbcbd3e0ed349ee589b113fa01011eddfd040eed320be1b24e90ed89def3eb50997a99a26aef95fb2fc39b30f94d3908833
+DIST libpng-1.5.21-apng.patch.gz 9511 SHA256 8a4fffa885f1a1a34a7bdcaa2d1b8f1e025f6e1cf9c5bf17224672d2a6948d94 SHA512 b3369d97b19ebeae06e1f2874c2a3cc8f42421fb4be76f913be359630c5483c31cad6643f7c0a4edd3a952406d6acbffdd4a6cbfc9a09df07094bf6c6d9fbe15 WHIRLPOOL 5403fef0c1233c2e82785690d619f0e917d98a0056058064ddba446ed9987d05a4fe608b4883196f035f4b2de2650d858906014d13e5aed4d275d9e5e42ffb3d
+DIST libpng-1.5.21.tar.xz 734356 SHA256 b5151c64bc70489997790a492e1094d106be90a22b2958c43eee25a70dffdba7 SHA512 dd27d250271b72c33b9ea6282b549ad2a7a638334f97a218a00cde3136d97faf37544e304f84b966a064f9117e4681dde4f888ad63ecab41473d176066f3f5b4 WHIRLPOOL 4768c55e4d62a32d490b29285262f2dfb160c7a35afdd0e8f8d14a70348b4020c6f57dd97a9015b912c49c3dd73b660e0905c74df3674c0549fc3add5358899e
 DIST libpng-1.6.10-apng.patch.gz 9573 SHA256 0f159466ae95511a05d701b6a28d03d09ca19598236579f368cc13aeb23d844f SHA512 b75dbc2bbae3b565dd1abeb1072dc4c1ceceadf97f7a35c1148136432457828a0e6f14df7cf469ab5c775c745be0729b927297207ed4fd58dee1bc635d53aebf WHIRLPOOL c781e8bf9a60479cf34b5ad88c0b1ff60ec7b5f5671e08aff53c34b7f33c86c8b4171c9bf3e6c597c825de6517fccc8fa3eda0f788acad96889dc13e0946d159
 DIST libpng-1.6.10.tar.xz 898452 SHA256 4003f0fd0e36110a2b742fc5b9e1ab93ed7a7ab57ae8dc65f0e8101458775a56 SHA512 f475ba5544b11064544a1571e194a7e4cf387d386cd9f300f8bbdc252636a141ac2beeff47f32ee45617d894a8dee8c0c81e71ba3d0c42a47160ce32078cd1b5 WHIRLPOOL 461c8574c394e45886991465ef102b19dc47739e2197cd660ff91d0ce4865bb07dfef84113de655f9beebcf2c4b74e3fb097be6285533a877196288922e93742
 DIST libpng-1.6.12-apng.patch.gz 9586 SHA256 5f0f89a226edac5b5e6f45ee12b42a970ea1e3a4366bc72e584a7e3f44a1d76e SHA512 d22572263e7fd2ad98004290b567704b8a180a5877780110e5671e3374ab7fa27c9c770de7b40bce44acaf78d2e29742bc93ccd51ff22b15707e8fe8ca5c82a0 WHIRLPOOL 995e46d9616f7270ffbcc54b7ab2496fadcdb60080e5af4a7756e30a180866d2afebacdc66e1db7335c9c71cc93226f1bca19f481fe506389ed43cd7038022d8
 DIST libpng-1.6.12.tar.xz 902368 SHA256 c32ff6d299d2686b65708d4c6c065242d8c2f3ed54890c47d518c3ef568e6c5e SHA512 7cdf40b51a29f4df6f5be2c6946de80aa74c54169ceef2ed089fad21bf035b5672ad7e8983ca4d72edd4bb84c9d4e0077479a20e526e27685d30da03230bbb91 WHIRLPOOL 0a3618c64d3af848922a58cf84bc329b9dde33d43ae795e1d1f3d07582355a9a25cf5c541f2c3ce7c5d4082e3fd1294e6dd34c0d765e40cb860181d507876bc1
-DIST libpng-1.6.13-apng.patch.gz 9592 SHA256 e8539d22f50af54da6102c1f613ea485435552aa157104ff7812deb33969213c SHA512 574b1b4db91a434ab4e31269e795859a7a89c2077bdaa871b598d7a06c2d68c6e552c9b2ebaac690d8700e0a2b68a85a139c40d9ae765aaa70ea8df1fbbef5b3 WHIRLPOOL e24a585a4d4156b6c5ac71966572420ee8307217f31dcdc0661def370d0d0846d8fdaa56c9e07af81a11ed24e77ff2fe006ee4b3dfb47e14c15680faa49fad52
-DIST libpng-1.6.13.tar.xz 902612 SHA256 d9c8ce54a5fc8052ed794ca65b553384a74c0608b09ae163cbbb07176018e625 SHA512 e37ff037f62924a714f9455d5d76a013a6c8dae5855a84cccafe0039733d16b888d03ad2b6cf094dc2b053ae62d8e1016f40c4ea9dfc0b886be9504561d0229a WHIRLPOOL a75d1c32ad124a52189be7189753c098dd5b530639c25310b83af5218d427f71774f768ffe32001876b69332925196e04ebf4f5596b513924d99296b10c63843
 DIST libpng-1.6.15-apng.patch.gz 9555 SHA256 08f1c809837476705f33f1f8d30cf875275466ae00ea25cd21f084901f7aeb82 SHA512 11da1079b559f338f19a7c716fcd62e3084b7f5773a235c88cf1cc436166987d83e2e17d99bd734ac126e8e754b84827beb123e534549c5c3c82b73221c2a0a8 WHIRLPOOL 4cad0008d42f4fc4984bfda37c6a2c4fe2673209e86d00204e53b11453e959b00a9e1b01b658e015c1a0879f3e498876602ae8f172bd07f58a4642689280d3d4
 DIST libpng-1.6.15.tar.xz 904992 SHA256 ad7046f1548b01b736c347d3125598ba507cbd1c9a0f0a1ffcc8df5aaafa53b7 SHA512 c5e6b7e994fa43b73d566e5794abf3f1a998c8a04436dabc48a14810490c15c8d93e4379564dab08d0197224f8599b3a75bf65ecc3a549c94617aa21d9a3b5ec WHIRLPOOL f089f187f9b601073f5e9c770b1c898c59ce2d1ec0acd1859ff618719218ab2d33756b101180b69c2e999dfefb22f06e2247a54a912f4032ae783959badef2a9
+DIST libpng-1.6.16-apng.patch.gz 9552 SHA256 07eb4825f6787283aa2c4f77b6fd421875ec7982e2a5b1705c3bea0cdccf5c2d SHA512 85c09090dab312ed9b61eac2d957ce1eda6496d4d66e42b3ce4278d5dd6213fffe1f84c0b94424c389e04a99d0cc08ec5b9a77cb2ac14ad75dc49055bbb45292 WHIRLPOOL b3980311dc81ae83cd42969d797924ebe27da1c8955d0f931e97df5d609d8eb0db46bd418f82d02f1f914910c6a866b8d7b4664a2780a711fefa5c71b749e376
+DIST libpng-1.6.16.tar.xz 907284 SHA256 42f754df633e4e700544e5913cbe2fd4928bbfccdc07708a5cf84e59827fbe60 SHA512 d469a86b8c111be98c15afb1744ead0c7235dbd0b18cf47c5b4b4cfe64c7b1f63897d32e1fc65b0fdd2e01aa6767cad85ea3c0f6aabf9b647696e58803904fa3 WHIRLPOOL dae0248eec827d1462f4e8b9b7c4405fc3c05bc7e9f01ca8ff817a16b010b9aeaf54fa611d223385c0b2af8ee844465eea1b0e8d1125da5213fe2e7f1928f27a
 EBUILD libpng-1.2.51.ebuild 1106 SHA256 dea46b4f8b6869833f621df20e3adf1d64bfb7c401d72662f12d455e2daf26e8 SHA512 6acd2fd12900af3cd119267120b7c7e3d73e2527af183366508c1d91f0388ce6f5f6426be33a9be5dece8cf629ae55786d93a0dba94e4a5a0970384af9357b36 WHIRLPOOL 7042c88053ae711599c6198e4729523aa772705d93832a9e8aacd20b58de23da2d78e5bac69ff6a218fc0262de1432097afdea5779d4c012c612086e767a171b
 EBUILD libpng-1.2.52.ebuild 1116 SHA256 5d446dad92845c6384d47b666e6d94d65d2056e4950f54d0f82a8490f8290e35 SHA512 f1b07c9bf3421e65c6afded3905d693c0e72d4cb52944b78721a79907ea729c4c094094ccb3db27501098a865a34cc91a7c913b3d8ff022868530c0dab1a1964 WHIRLPOOL c92280abc28308ab6d8da7a8582bb9a9dc2d94ad5e06acd30f751151d9fc588a41ebb33ef24ab475e5913c4c0a88a0b18205afe8574fbdddd5c7942704790942
-EBUILD libpng-1.5.18-r1.ebuild 1731 SHA256 95a51619d695023628c7d2f9c9c7aefa3fc684011eeffb1f3e03e74a02939fda SHA512 18450175d4308ed2a8d3b0e7821e203988d83df9f01bf9d4e3e95c58f3c721111c4fe1e32cf3368f6c4b0fa953e9bff85ebde4888af7df5baf90595002ad6e75 WHIRLPOOL 6fb5dfe6fdd5c32f8c268ecd4ad274aa47bfe62cdb89afec8537aad0a710834c6abbe55d18a12311990846c654c89cc54c4c21a48cb62dd12ad8348698c1582f
-EBUILD libpng-1.5.19.ebuild 1739 SHA256 4de8027e827f01cd79cdc651a2dcbaa26548e9f65eac524c62e0d305a5406ef5 SHA512 16d14ee973e309091294dc6f084eb230d0824f3d07bbd9db5d51a61fc231317a45c50f8c0cbc3aeb0312402bcd4178749854406a4448139ed13c8b4ce1c14a4f WHIRLPOOL 65a45006d7719ff88ba6eb3ceeb6bf495d1736225bac46f51decca0849ad8a43d8105b4c338331fabd809a7662e7f89dec14ef28a0105d7458b35f049b1f402c
 EBUILD libpng-1.5.20.ebuild 1731 SHA256 0211a318069556ffdfbc82161b0f208ccd848c8c95286399ee076f97b276ddc6 SHA512 8c983926e1be1b495d53812909cee8d2bb7915abcb16a9ed5d132362c2ed295f94671d3a0cef7662e3cfc2cb62cf765a3b5bbe46e3d0ce8b483d111e7d9088c5 WHIRLPOOL 3cfe248a6f67c2f3662893f2d14c8e4fb57b16313de69343e6022a33f2b2ef53ff245fa234392ef4bcf9700818461bcb468ea937ecc8a5bf5d62a72248c745f6
+EBUILD libpng-1.5.21.ebuild 1742 SHA256 024872b17101cba6ca6da241a5194d42419ecf5aa5a35a39e8826a89dea4a3d8 SHA512 bb312a8f5ab8d25d6bb9317e9713eee00142bb6fd95082311ce840bcfe06191c02cdb88248a62ae64c0914dc0c0d6015f078f674c01aeadfee9cdf3a9565e03d WHIRLPOOL 00d7fb2973e146b13a6e7f6dd2b554dc3de506d60ad6a5d94d5c8237bd3958332a069953c68bcac1e0b98d717ad1b3e481ebae75be6c15b0ae690fa822404af3
 EBUILD libpng-1.6.10.ebuild 1507 SHA256 3e1debfdc9b6fdeffef39cd0f13a0cf3f54acb7187f872e5ec79e4b299214071 SHA512 986152522e6572cb7a92540a012bfe2244bfbdf2a6ec23fc7c40535ace94dffb147100eb1c74274c23db56e9b4dbe943c50245351fa58867fc124fdfb2ec1547 WHIRLPOOL b6558d233624f47295e2172b20c4432d0e6c67c5d82552ba5309a58b38ceb26caa8725e47f64fe2a19b7db79da65d6d8d3cc39b12465ef12496d746ef3f7258d
 EBUILD libpng-1.6.12.ebuild 1524 SHA256 3ce6ed855e702790ec7e3d47802dd49f182f75aa366f6a48f9e602a207ce16b4 SHA512 495eee52b1ea5fd3f8e9bbd431057bb8f694e67a21e9f57820ca1379bce07282f1cff219b011c654a716b291941aad8f8ac65289445d189991fbbaa0b8311627 WHIRLPOOL a147bbae9a6b6029bd961ddf2210e43f02cae474144a31e03933e465c98998ca0871a359acd5622117c2ed3d261543074fcb137e51c77e330dc188f6a82d74b4
-EBUILD libpng-1.6.13.ebuild 1531 SHA256 43b121d299c61fa21a491354cf103eedc6cffaab6563018109384664ecb26982 SHA512 bb15b124f1134a0605fe7db93965d515dae97481d95c5b45581ac9a5c34dbb64adfc946758f4b0f0e7bc983d093c5a32ff602d62d5a719ed4481a4b7afa91824 WHIRLPOOL 14198767a32ee9a2e1702e48aaefcb3bcd8acc4f8112b0c1660915cafc0b16080c452282a903fa61aab78c4f50821526f5c69db3e9040fa992a5358fe125dfe7
 EBUILD libpng-1.6.15.ebuild 1523 SHA256 151d000b30c0e3d8b049719456f1c5b7ab60fbff18ad2068039a04e585151cd2 SHA512 8c2c52d176ca1b7445bb31b39a38f30c16efff1ae4005af9dcd9781dc03ff8b662c9fdfcaed979d5a62a750dcf816e384746d24b8244f18ca3f4315b196bf1eb WHIRLPOOL e36a87fffa15451411e6a68f456c7dc7b6bb16ed85c0474e1d0b3234547c868c35b72ae7fd63ae94e563515eac3ef4d9fd0c45e47426a3948cea1438fe325068
-MISC ChangeLog 62544 SHA256 9e458b5fcc81c4b9a38623137d0b8b0367cd963df93f95b135e572e0f0c35fd1 SHA512 9eca3e62c39b02b0b9de223dd5c16e583c874aac2725fb08774cc0c3f6983a0731f05c4a1a711e47f165c3811ef8a12fbc95176360d384f0c49a439810ee9640 WHIRLPOOL ab9358b3ed2fd01ef649d4aebc3dae345ca3ffa2e0d465a51c1b87ae1189a31d18ff2a84e8c8bd106efaa8058e368aa841236488014e15a47257c05c5befdece
+EBUILD libpng-1.6.16.ebuild 1534 SHA256 9f7ee303ea224c9d5bc6aeca3c7d203fbfc1925481a1723c374e6d905bafc61a SHA512 2a61615a67df686d7b7c97fdc47dbe59e38f8b6ce664cfed6132d7211fb8f90efb04d9ca8e2ab72c37a13c5ca554b41975fcb16ebab81482b63607de81f7443a WHIRLPOOL 49b63c9cfc63b1769a390c037eb3a689687bc28e25b4b2e575d29e74cca5daee170599178fbe102b534c52441d892b26c7a2cf40474b7d00835e09a76f825980
+MISC ChangeLog 62830 SHA256 a2aa9b635590fc3aff8b1624d39e76fb37ff93195ab06baeb8e2e33776e2e2d3 SHA512 5bc278e20c4109c383836fcf0b84f39fb8e561a887bf32a6177de88694a14fee1454362c76c93d2b86059319574f8ab459e7c15205c898902ea00b52bd52bde3 WHIRLPOOL a13b831ee7c683b235076d43398361d76445ba241a8d19fbc214222466517acf3842229121829c787b394b5a2bcb272e91d7a6b572ccfe17d2b21841004ab764
 MISC metadata.xml 326 SHA256 b3ff7fa84cb973407915b046ba95aeb5e5fec97707b56978093a16885922d6d7 SHA512 61db558547cea5a5bdf4b89326d76b12aad12eab60bb26dce3fdc7360842f761e692855046bebed9d2e63b5823a11ac34bef0f5721f48046323ced30841cd72f WHIRLPOOL ab8a546352be7956e990d777bbe8e20429fa2eeabb1a8e9766bce982f5f0bbe4730a57dde96880d97837021bfd8e5a09cfa54e898c01c31a24b02bd0c2526666
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSQmgMACgkQkKaRLQcq0GLy8QCfdLf9Y0+pdFtHHg0koCE5rEYR
-z/YAn2JIe3KSSsyn85sVocYtidI2gS54
-=EA5i
+iQIcBAEBCAAGBQJUmQhWAAoJEPiazRVxLXTF5kgP/AsA6EKY3utfu7Pta8O1bLvE
+CVGAen6zbGO7jruvpJVSFle8Mu1uNH4o/9Cgs2iwXmOLTqyhF9v6ZINNdqQiFtG3
+MzBMZOFDKeFjfafCAhKhsbbCMOnCS1o+WPx1oEJp5QV/ygu115/8AAtC28pSDJtf
+MJKV5zy2UoHZpuc91SDLEP/CQZUV4ekDe+bdLBs5kmQBRlc1+QyaaggfcL5046QJ
+L8LuklnWUvHqg0XBrhjIV/H+2peg873WivSFx4wKGS0g8RwBXZv2RTymDls3LB84
+eghZmeEKi0CLChS9g1gPjHhuwEEl+/v2oe/SInA5jipPobGiKxHv2KWMf5Ddqrd+
+Y8rDcwsmhVFfAXGc1VizMtVdR/xyMge+mYSMB26yvf5addzrK2d868dof0aUvwiy
+HlXmyG3+SPazWpaE6O/R55VEV5YN6F11iKy0F1p6o5IMTRDpEqkpl6nI3B/LQee/
+i1caFCkTVxc3Th19MW4zJY1/aD2NAjG7yDHzzlsbvHWcsxxXc1np0scJ9jX3w7GW
+iksOE3LtIYiiVQtsYbEwmf+doCiEt0c7OJDntSg3eCikHVPZKHeZVp284XhIUZLm
+sZ0zJVRQ9KUMbi3l+UmdJcQcP/B9HD+Z2d/jDZA6rO/0hMqFFrPwjT98tL6mU0DI
+MMjrEfntli/9qxz4XHsK
+=w3Ks
 -----END PGP SIGNATURE-----
