@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/libpng-1.5.18-r1.ebuild,v 1.2 2014/07/22 12:46:07 ssuominen Exp $
-
-# this ebuild is only for the libpng15.so.15 SONAME for ABI compat
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/libpng-1.5.21.ebuild,v 1.1 2014/12/23 06:14:45 polynomial-c Exp $
 
 EAPI=5
+
+# this ebuild is only for the libpng15.so.15 SONAME for ABI compat
 
 inherit eutils libtool multilib-minimal
 
@@ -15,7 +15,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.xz
 
 LICENSE="libpng"
 SLOT="1.5"
-KEYWORDS="~alpha amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
 IUSE="apng neon"
 
 RDEPEND="sys-libs/zlib:=[${MULTILIB_USEDEP}]
@@ -24,6 +24,8 @@ RDEPEND="sys-libs/zlib:=[${MULTILIB_USEDEP}]
 		!app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] )"
 DEPEND="${RDEPEND}
 	app-arch/xz-utils"
+
+DOCS=""
 
 pkg_setup() {
 	local _preserved_lib=${EROOT}/usr/$(get_libdir)/libpng15.so.15
