@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.470 2014/12/16 20:45:53 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.471 2014/12/23 06:14:45 polynomial-c Exp $
+
+*libpng-1.6.16 (23 Dec 2014)
+*libpng-1.5.21 (23 Dec 2014)
+
+  23 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> -libpng-1.5.18-r1.ebuild,
+  -libpng-1.5.19.ebuild, +libpng-1.5.21.ebuild, -libpng-1.6.13.ebuild,
+  +libpng-1.6.16.ebuild:
+  Security bump (bug #533358). Removed old.
 
   16 Dec 2014; Markus Meier <maekke@gentoo.org> libpng-1.6.15.ebuild:
   arm stable, bug #531264
